清理过时兼容并补齐 3.1.3 升级映射 (#256)